fix: Update unit tests and fix the build process
Signed-off-by: Oleg Kopysov <o.kopysov@samsung.com>